possible margin and align fix

--- a/css/main.css
+++ b/css/main.css
@@ -1135,6 +1135,9 @@ em, i {
 
 p {
   margin: 0 0 2em 0; }
+p.HDIJ {
+  margin-left: 300;
+  text-align: left; }
 
 h1, h2, h3, h4, h5, h6 {
   color: #fff;
